--- a/catalog.html
+++ b/catalog.html
@@ -75,50 +75,85 @@
               </ul>
             </div>
         </div>
+  <div class="col">
+
+      <h1 class="text-center mt-5 mb-5">Каталог</h1>
+
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-4">
+<!--        <div class="col-1"></div>-->
+          <div class="card mx-2 my-2">
+            <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+                </div>
+            <div class="card-body">
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
+              <button type="button" class="btn btn-outline-dark">View</button>
+              <button type="button" class="btn btn-outline-dark">Edit</button>
+            </div>
+          </div>
+        </div>
+<!--      <div class="row">-->
+        <div class="col-1"></div>
+        <div class="col-4">
+          <div class="card mx-2 my-2">
+            <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+                </div>
+            <div class="card-body">
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
+              <button type="button" class="btn btn-outline-dark">View</button>
+              <button type="button" class="btn btn-outline-dark">Edit</button>
+            </div>
+          </div>
+<!--        <div class="col-1"></div>-->
+      </div>
+<!--  </div>-->
   <div class="col-10">
-      <h1 class="text-center mt-5">Главная</h1>
-      <h6 class="text-center text-body-secondary">Вы находитесь на сайте, предназначеном для продажи товаров.</h6>
-        <div class="col-lg-12 content px-5">
-          <div class="row">
-              <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
-                  <div class="card text-center" style="width: 30vh;">
-                    <div class="card-header">
-                      <p class="h5 mt-2">Товар 1</p>
-                    </div>
-                    <div class="card-body">
-                      <h2 class="card-title">$ 100</h2>
-                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
-                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
-                    </div>
-                  </div>
-              </div>
-              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
-                  <div class="card text-center" style="width: 30vh;">
-                    <div class="card-header">
-                      <p class="h5 mt-2">Товар 1</p>
-                    </div>
-                    <div class="card-body">
-                      <h2 class="card-title">$ 100</h2>
-                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
-                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
-                    </div>
-                  </div>
-              </div>
-              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
-                   <div class="card text-center" style="width: 30vh;">
-                    <div class="card-header">
-                      <p class="h5 mt-2">Товар 1</p>
-                    </div>
-                    <div class="card-body">
-                      <h2 class="card-title">$ 100</h2>
-                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
-                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
-                    </div>
-                  </div>
-              </div>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-5">
+          <div class="card w-100 mx-4 my-2">
+            <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+                </div>
+            <div class="card-body">
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
+              <button type="button" class="btn btn-outline-dark">View</button>
+              <button type="button" class="btn btn-outline-dark">Edit</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-5">
+          <div class="card w-100 mx-2 my-2">
+            <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+                </div>
+            <div class="card-body">
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
+              <button type="button" class="btn btn-outline-dark">View</button>
+              <button type="button" class="btn btn-outline-dark">Edit</button>
+            </div>
           </div>
         </div>
   </div>
 </div>
+      </div>
+  </div>
+
 </body>
 </html>
