--- a/category.html
+++ b/category.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Каталог</title>
+    <title>Категория 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -72,100 +72,89 @@
         </div>
   <div class="col">
 
-      <h1 class="text-center mt-5 mb-3 me-5">Каталог</h1>
-<div class="col-lg-12">
-  <div class="row">
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
-              </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
+      <h1 class="text-center mt-5 mb-5">Категория 1</h1>
 
-      </div>
-    </div>
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+      <div class="col-lg-12 content px-5">
+          <div class="row">
+              <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
+                  <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
               </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col-lg-12">
-  <div class="row">
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
+                  <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
               </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
+              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
+                   <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
               </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
           </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
+<!--  </div>-->
+      <div class="col-lg-12 content px-5">
+          <div class="row">
+              <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
+                  <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
+                  <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-sm-3 mt-5 ms-5 me-5 ps-5 pe-5">
+                   <div class="card text-center" style="width: 30vh;">
+                    <div class="card-header">
+                      <p class="h5 mt-2">Товар 1</p>
+                    </div>
+                    <div class="card-body">
+                      <h2 class="card-title">$ 100</h2>
+                      <p class="card-text my-4 fw-medium">10 users included, 2 GB of storage, Email support, Help center access</p>
+                      <a href="#" class="btn btn-outline-primary w-100">Купить</a>
+                    </div>
+                  </div>
+              </div>
+          </div>
+        </div>
   </div>
 </div>
 </body>
