--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Каталог</title>
+    <title>Контакты</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -70,103 +70,43 @@
               </ul>
             </div>
         </div>
-  <div class="col">
+    <div class="col-10">
+      <h1 class="text-center my-5">Контакты</h1>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-4">
+            <div class="card">
+              <div class="mx-3 my-2">
+                <label for="exampleFormControlTextarea1" class="form-label">Имя</label>
+                <input class="form-control">
+              </div>
+              <div class="mx-3 my-1">
+                  <label for="Input1" class="form-label">Почта</label>
+                <div class="input-group mb-1">
+                    <span class="input-group-text" id="basic-addon1">@</span>
+                    <input type="email" class="form-control" id="Input1">
+                </div>
+              </div>
+              <div class="mx-3 mt-2 mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Сообщение</label>
+                <textarea class="form-control mb-3" id="exampleFormControlTextarea1" rows="2"></textarea>
+                <button type="button" class="btn btn-primary">Отправить</button>
+              </div>
 
-      <h1 class="text-center mt-5 mb-3 me-5">Каталог</h1>
-<div class="col-lg-12">
-  <div class="row">
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
-              </div>
             </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
+<!--      </div>-->
+<!--      <div class="row">-->
 
-      </div>
+        <div class="col-1"></div>
+        <div class="col-4">
+            <h4>Наши контакты</h4>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p class="lh-lg"></p>
+            While these feedback styles cannot be styled with CSS, you can syill customize the feedback text through JavaScript.
+        </div>
     </div>
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
-              </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
-      </div>
     </div>
-  </div>
-</div>
-<div class="col-lg-12">
-  <div class="row">
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
-              </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-1" style="width: 13vh"></div>
-    <div class="col-sm-4 ms-5 my-5">
-      <div class="card">
-        <img src="https://static.wixstatic.com/media/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg/v1/fill/w_720,h_480,al_c,lg_1,q_80/7edcc6_004bceb0934f4e43af5cff5d44c01451.jpg" class="card-img-top" style="height: 30vh" alt="...">
-            <div class="card-img-overlay">
-              <div class="card-body d-flex align-items-center justify-content-center" style=" height: 21vh">
-              <h5 class="card-title text-center mt-5 text-white-50">Thumbnail</h5>
-              </div>
-            </div>
-        <div class="card-body">
-          <p class="card-text h5">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="hstack gap-2">
-          <div class="btn-group ms-3 mb-3" style="width: 10vh" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-outline-secondary">Edit</button>
-          </div>
-          <p class="card-text-center text-body-secondary text-end" style="width: 40vh;">9 mins</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
 </div>
 </body>
 </html>
