--- a/category.html
+++ b/category.html
@@ -71,10 +71,8 @@
             </div>
         </div>
   <div class="col">
-
       <h1 class="text-center mt-5 mb-5">Категория 1</h1>
-
-      <div class="col-lg-12 content px-5">
+      <div class="col-lg-12 px-5">
           <div class="row">
               <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
                   <div class="card text-center" style="width: 30vh;">
@@ -114,8 +112,7 @@
               </div>
           </div>
         </div>
-<!--  </div>-->
-      <div class="col-lg-12 content px-5">
+      <div class="col-lg-12 px-5">
           <div class="row">
               <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
                   <div class="card text-center" style="width: 30vh;">
