--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
   <div class="col-10">
       <h1 class="text-center mt-5">Главная</h1>
       <h6 class="text-center text-body-secondary">Вы находитесь на сайте, предназначеном для продажи товаров.</h6>
-        <div class="col-lg-12 content px-5">
+        <div class="col-lg-12 px-5">
           <div class="row">
               <div class="col-sm-3 mt-5 ms-5 ps-5 me-5 pe-5 mb-5">
                   <div class="card text-center" style="width: 30vh;">
